<resources>
    <string name="app_name">Task Management App</string>

    <!-- Activity labels -->
    <string name="new_notebook">New Notebook</string>
    <string name="new_schedule">New Schedule</string>
    <string name="new_task">New Task</string>

    <!-- Button labels -->
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="no">No</string>
    <string name="note">Note</string>
    <string name="notebook">Notebook</string>
    <string name="task">Task</string>
    <string name="save">Save</string>
    <string name="schedule">Schedule</string>
    <string name="txt_class">Class</string>
    <string name="yes">Yes</string>

    <!-- Nav labels -->
    <string name="notebooks">Notebooks</string>
    <string name="overdue">Overdue</string>
    <string name="tasks">Tasks</string>
    <string name="schedules">Schedules</string>

    <!-- Common fields -->
    <string name="theme">Theme</string>

    <!-- Task fields -->
    <string name="label">Label</string>
    <string name="due_date">Due Date</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="open">Open</string>
    <string name="pending">Pending</string>
    <string name="finished">Finished</string>
    <string name="finished_on">Finished on</string>
    <string name="notes">Notes</string>
    <string name="notes_opt">Notes (Optional)</string>
    <string name="cancel">Cancel</string>

    <!-- Notebook + Note fields -->
    <string name="notebook_name">Notebook Name</string>
    <string name="new_note">New Note</string>
    <string name="start_typing_here">Start typing here…</string>
    <string name="modified_last">Modified last</string>
    <string name="date_last_modified">Date last modified</string>
    <string name="content">Content</string>

    <!-- Schedule + Class fields -->
    <string name="schedule_name">Schedule Name</string>
    <string name="new_class">New Class</string>
    <string name="txt_classes">Classes</string>
    <string name="class_name">Class Name</string>
    <string name="instructors">Instructors</string>
    <string name="venue">Venue</string>
    <string name="day">Day</string>
    <string name="select_time">Select Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="hours">Hrs</string>
    <string name="minutes">Mins</string>

    <!-- Dialog messages -->
    <string name="dialog_open_task">Mark this task as open?</string>
    <string name="dialog_pending_task">Mark this task as pending?</string>
    <string name="dialog_finished_task">Mark this task as finished?</string>
    <string name="dialog_title_delete_task">Delete this task?</string>
    <string name="dialog_title_delete_notebook">Delete this notebook?</string>
    <string name="dialog_title_delete_note">Delete this note?</string>
    <string name="dialog_title_delete_schedule">Delete schedule?</string>
    <string name="dialog_title_delete_class">Delete class?</string>
    <string name="dialog_message_delete_task">You will not be able to recover this task and its contents after deleting.</string>
    <string name="dialog_message_delete_notebook">You will not be able to recover this notebook and its contents after deleting.</string>
    <string name="dialog_message_delete_note">You will not be able to recover this note after deleting.</string>
    <string name="dialog_message_delete_schedule">You will not be able to recover this schedule and its contents after deleting.</string>
    <string name="dialog_message_delete_class">You will not be able to recover this class and its contents after deleting.</string>

    <!-- Snack bar messages -->
    <string name="snack_fill_up">Fill up all required fields.</string>
    <string name="title">Title</string>

    <!-- String arrays -->
    <string-array name="arr_task_status">
        <item>@string/open</item>
        <item>@string/pending</item>
        <item>@string/finished</item>
    </string-array>

    <string-array name="arr_week">
        <item>@string/sun</item>
        <item>@string/mon</item>
        <item>@string/tue</item>
        <item>@string/wed</item>
        <item>@string/thu</item>
        <item>@string/fri</item>
        <item>@string/sat</item>
    </string-array>

</resources>