<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:drawableLeftCompat="@drawable/ic_label_black_24dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDueDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawablePadding="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:drawableLeftCompat="@drawable/ic_event_black_14dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtLabel" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:drawablePadding="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:drawableLeftCompat="@drawable/ic_schedule_black_14dp"
            app:layout_constraintBottom_toBottomOf="@id/txtDueDate"
            app:layout_constraintLeft_toRightOf="@id/txtDueDate"
            app:layout_constraintTop_toTopOf="@id/txtDueDate" />

        <TextView
            android:id="@+id/txtFinish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:drawablePadding="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:drawableLeftCompat="@drawable/ic_done_all_black_14dp"
            app:layout_constraintBottom_toBottomOf="@id/txtTime"
            app:layout_constraintLeft_toRightOf="@id/txtTime"
            app:layout_constraintTop_toTopOf="@id/txtTime" />

        <TextView
            android:id="@+id/txtOverdue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:drawablePadding="4dp"
            android:text="@string/overdue"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/scarlet"
            app:drawableLeftCompat="@drawable/ic_report_problem_black_14dp"
            app:drawableTint="@color/scarlet"
            app:layout_constraintBottom_toBottomOf="@id/txtFinish"
            app:layout_constraintLeft_toRightOf="@id/txtFinish"
            app:layout_constraintTop_toTopOf="@id/txtFinish" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:chipSpacingHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/txtDueDate"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipOpen"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"
                app:chipEndPadding="16dp"
                app:chipStartPadding="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPending"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending"
                app:chipEndPadding="16dp"
                app:chipStartPadding="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFinished"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finished"
                app:chipEndPadding="16dp"
                app:chipStartPadding="16dp" />

        </com.google.android.material.chip.ChipGroup>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:alpha="0.6"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/chipGroup" />

        <TextView
            android:id="@+id/txtOpen"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="32dp"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/open"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:drawableLeftCompat="@drawable/ic_launch_black_24dp"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <TextView
            android:id="@+id/txtEdit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="32dp"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/edit"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:drawableLeftCompat="@drawable/ic_create_black_24dp"
            app:layout_constraintTop_toBottomOf="@id/txtOpen" />

        <TextView
            android:id="@+id/txtDelete"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="32dp"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/delete"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:drawableLeftCompat="@drawable/ic_delete_black_24dp"
            app:layout_constraintTop_toBottomOf="@id/txtEdit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>