<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingHorizontal="16dp"
            android:paddingTop="24dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:drawableLeftCompat="@drawable/ic_folder_black_24dp" />

        <TextView
            android:id="@+id/txtSubHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:alpha="0.6"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/txtOpen"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="32dp"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/open"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:drawableLeftCompat="@drawable/ic_launch_black_24dp" />

        <TextView
            android:id="@+id/txtEdit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="32dp"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/edit"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:drawableLeftCompat="@drawable/ic_create_black_24dp" />

        <TextView
            android:id="@+id/txtDelete"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="32dp"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/delete"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:drawableLeftCompat="@drawable/ic_delete_black_24dp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>